--- a/package.json
+++ b/package.json
@@ -8,53 +8,55 @@
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
     "server": "npx serve ./build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
-    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
+    "lint": "eslint --fix --color --cache \"./src/**/*.{js,jsx,ts,tsx,json}\"",
+    "lint:ci": "eslint \"./src/**/*.{js,jsx,ts,tsx,json}\"",
+    "format": "prettier --write --config ./.prettierrc.js \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "format:ci": "prettier --check --config ./.prettierrc.js \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "~17.0.2",
+    "react-dom": "~17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.4",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@babel/runtime": "^7.17.2",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
-    "@types/estree": "^0.0.51",
-    "@types/node": "^17.0.18",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.6.0",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "html-webpack-plugin": "^5.5.0",
+    "@babel/core": "~7.17.4",
+    "@babel/plugin-transform-runtime": "~7.17.0",
+    "@babel/preset-env": "~7.16.11",
+    "@babel/preset-react": "~7.16.7",
+    "@babel/preset-typescript": "~7.16.7",
+    "@babel/runtime": "~7.17.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "~0.5.4",
+    "@types/estree": "~0.0.51",
+    "@types/node": "~17.0.18",
+    "@types/react": "~17.0.39",
+    "@types/react-dom": "~17.0.11",
+    "@typescript-eslint/eslint-plugin": "~5.12.0",
+    "@typescript-eslint/parser": "~5.12.0",
+    "babel-loader": "~8.2.3",
+    "css-loader": "~6.6.0",
+    "eslint": "~8.9.0",
+    "eslint-config-prettier": "~8.4.0",
+    "eslint-plugin-import": "~2.25.4",
+    "eslint-plugin-jsx-a11y": "~6.5.1",
+    "eslint-plugin-prettier": "~4.0.0",
+    "eslint-plugin-react": "~7.28.0",
+    "eslint-plugin-react-hooks": "~4.3.0",
+    "html-webpack-plugin": "~5.5.0",
     "husky": "4",
-    "lint-staged": "^12.3.4",
-    "prettier": "^2.5.1",
-    "react-refresh": "^0.11.0",
-    "sass": "^1.49.7",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.1",
-    "typescript": "^4.5.5",
-    "webpack": "^5.69.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
-    "webpack-merge": "^5.8.0"
+    "lint-staged": "~12.3.4",
+    "prettier": "~2.5.1",
+    "react-refresh": "~0.11.0",
+    "sass": "~1.49.7",
+    "sass-loader": "~12.6.0",
+    "style-loader": "~3.3.1",
+    "typescript": "~4.5.5",
+    "webpack": "~5.69.0",
+    "webpack-bundle-analyzer": "~4.5.0",
+    "webpack-cli": "~4.9.2",
+    "webpack-dev-server": "~4.7.4",
+    "webpack-merge": "~5.8.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json}": [
